# passat-3b2-obd

./: .gitignore  KWP2000.py  README.md  docs2.txt  docs3.txt  main.py  read_kwp1281_id.py
c++/: CMakeLists.txt  main.cpp  passat_3b2_obd_server.cpp
c++/lib/: FtdiUart.cpp  FtdiUart.h
readings/: docs.txt
